# kerrigan

./: .gitignore  COPYING  Cargo.toml  INSTALL.md  LICENSE  Makefile.am  README.md  build-release.sh  build.sh  configure.ac  download-crates.sh  libkerriganconsensus.pc.in  rust-toolchain.toml  vendor-hash.sh
.cargo/: config.toml.offline
.github/workflows/: build.yml
contrib/: README.md  fetch-params.sh  kerrigan-cli.bash  kerrigan-tx.bash  kerrigand.bash  launch_testnet.sh  regtest_health_monitor.sh  setup_fund_wallets.sh  valgrind.supp
contrib/auto_gdb/: README.md  dash_dbg.sh
contrib/builder-keys/: README.md
contrib/containers/: README.md
contrib/debian/: README.md  control  copyright  kerrigan-qt.desktop  kerrigan-qt.install  kerrigan-qt.lintian-overrides  kerrigan-qt.manpages  kerrigan-qt.protocol  kerrigan-tx.bash-completion  kerrigan-tx.install  kerrigan-tx.manpages  kerrigand.bash-completion  kerrigand.examples  kerrigand.install  kerrigand.lintian-overrides  kerrigand.manpages  rules  watch
contrib/devtools/: README.md  copyright_header.py  gen-kerrigan-conf.sh  gen-manpages.py  split-debug.sh  test_deterministic_coverage.sh  update-rust-hashes.sh  update-translations.py
contrib/flatpak/: network.kerrigan.kerrigan-core.metainfo.xml
contrib/guix/: INSTALL.md  README.md  guix-attest  guix-build  guix-clean  guix-codesign  guix-verify  manifest.scm  security-check.py  symbol-check.py
contrib/init/: README.md  kerrigand-devtreasury.service  kerrigand-founders.service  kerrigand-miner.service  kerrigand.conf  kerrigand.init  kerrigand.openrc  kerrigand.openrcconf  kerrigand.service  network.kerrigan.kerrigand.plist
contrib/linearize/: README.md  example-linearize-testnet.cfg  example-linearize.cfg
contrib/macdeploy/: README.md  detached-sig-create.sh  macdeployqtplus
contrib/message-capture/: message-capture-docs.md
contrib/qos/: README.md  tc.sh
contrib/seeds/: README.md  generate-seeds.py
contrib/testgen/: README.md
contrib/tracing/: README.md  connectblock_benchmark.bt  log_p2p_traffic.bt  (+4 more)
depends/: .gitignore  Makefile  config.site.in  funcs.mk
doc/: JSON-RPC-interface.md  README.md  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-pool-operator.md  build-release.md  build-reproducibility.md  build-unix.md  build-windows.md  cjdns.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  evodb-verify-repair.md  external-signer.md  files.md  fuzzing.md  guix.md  i2p.md  init.md  instantsend.md  kerrigan-conf.md  managing-wallets.md  masternode-budget.md  multisig-tutorial.md  p2p-bad-ports.md  pool-integration.md  productivity.md  reduce-memory.md  reduce-traffic.md  release-notes-empty-template.md  release-notes.md  release-process.md  (+6 more)
doc/man/: Makefile.am  kerrigan-cli.1  kerrigan-qt.1  kerrigan-tx.1  kerrigan-wallet.1  kerrigand.1
docs/: whitepaper.md
share/: setup.nsi  setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  addrman.cpp  bitcoin-cli.cpp  bitcoin-tx.cpp  bitcoin-util.cpp  bitcoin-wallet.cpp  bitcoind.cpp  cachemap.h  cachemultimap.h  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  clientversion.cpp  clientversion.h  core_memusage.h  core_write.cpp  ctpl_stl.h  dbwrapper.h  deploymentinfo.cpp  dsnotificationinterface.cpp  dsnotificationinterface.h  dummywallet.cpp  external_signer.h  flat-database.h  hash.h  hash_x11.h  httprpc.cpp  httpserver.cpp  httpserver.h  init.cpp  init.h  kerrigan-cli-res.rc  (+44 more)
test/: config.ini
(+545 files in other folders)
