[package]
name = "libkerrigan_sapling"
description = "Rust FFI for Sapling zk-SNARK shielded transactions in Kerrigan."
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
license = "MIT"

[lib]
name = "kerrigan_sapling"
path = "src/rust/src/lib.rs"
crate-type = ["staticlib"]

[dependencies]
# Sapling cryptography
sapling = { package = "sapling-crypto", version = "0.5", features = ["temporary-zcashd"] }
bellman = "0.14"
bls12_381 = "0.8"
jubjub = "0.10"
redjubjub = "0.8"
zcash_primitives = { version = "0.26", features = ["temporary-zcashd"] }
zcash_proofs = { version = "0.26", features = ["directories"] }
zcash_protocol = { version = "0.7", features = ["local-consensus"] }
zcash_note_encryption = "0.4"
zcash_encoding = "0.3"
zip32 = "0.2"

# Supporting crypto
blake2b_simd = "1"
blake2s_simd = "1"
group = "0.13"
subtle = "2.2"
rand_core = "0.6"
incrementalmerkletree = "0.8"
bridgetree = "0.7"
memuse = "0.2"
nonempty = "0.11"

# Rust/C++ interop — version must match cxxbridge-cmd
cxx = { version = "=1.0.186", features = ["c++17"] }

# Rust threading for batch validation
rayon = "1.5"

# Hashing (SHA-512 for scalar domain separation, SHA-256 for deterministic CRS seed)
sha2 = "0.10"

# Deterministic RNG for consensus-identical Groth16 parameter generation (#397)
rand_chacha = "0.3"

# General
byteorder = "1"
hex = "0.4"
libc = "0.2"
tracing = "0.1"

# Sapling parameter file loading
wagyu-zcash-parameters = "0.2"

[profile.release]
lto = "thin"
panic = "unwind"
codegen-units = 1
overflow-checks = true
