[package]
name = "libkerrigan_sapling"
description = "Rust FFI for Sapling zk-SNARK shielded transactions in Kerrigan."
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
license = "MIT"

[lib]
name = "kerrigan_sapling"
path = "src/rust/src/lib.rs"
crate-type = ["staticlib"]

[dependencies]
# Sapling cryptography
sapling = { package = "sapling-crypto", version = "=0.5.0", features = ["temporary-zcashd"] }
bellman = "=0.14.0"
bls12_381 = "=0.8.0"
jubjub = "=0.10.0"
redjubjub = "=0.8.0"
zcash_primitives = { version = "=0.26.4", features = ["temporary-zcashd"] }
zcash_proofs = { version = "=0.26.1", features = ["directories"] }
zcash_protocol = { version = "=0.7.2", features = ["local-consensus"] }
zcash_note_encryption = "=0.4.1"
zcash_encoding = "=0.3.0"
zip32 = "=0.2.1"

# Supporting crypto
blake2b_simd = "=1.0.3"
blake2s_simd = "=1.0.3"
group = "=0.13.0"
subtle = "=2.6.1"
rand_core = "=0.6.4"
incrementalmerkletree = "=0.8.2"
bridgetree = "=0.7.0"
memuse = "=0.2.2"
nonempty = "=0.11.0"

# Rust/C++ interop - version must match cxxbridge-cmd
cxx = { version = "=1.0.186", features = ["c++17"] }

# Rust threading for batch validation
rayon = "=1.11.0"

# Hashing (SHA-512 for scalar domain separation, SHA-256 for deterministic CRS seed)
sha2 = "=0.10.9"

# Deterministic RNG for consensus-identical Groth16 parameter generation (#397)
rand_chacha = "=0.3.1"

# General
byteorder = "=1.5.0"
hex = "=0.4.3"
libc = "=0.2.182"
tracing = "=0.1.44"

# Sapling parameter file loading
wagyu-zcash-parameters = "=0.2.0"

[profile.release]
lto = "thin"
panic = "unwind"
codegen-units = 1
overflow-checks = true
